[tool.poetry]
name = "taskiq-dependencies"
version = "0.1.0"
description = ""
authors = ["Pavel Kirilin <win10@list.ru>"]
readme = "README.md"
packages = [{include = "taskiq_dependencies"}]

[tool.poetry.dependencies]
python = "^3.9"
typing-extensions = ">=3.10.0.0"
graphlib-backport = { version = "^1.0.3", python="<3.9" }

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
black = { version = "^22.6.0", allow-prereleases = true }
flake8 = "~4.0.1"
isort = "~5.10.1"
mypy = "~0.971"
pre-commit = "~2.20.0"
yesqa = "~1.3.0"
autoflake = "~1.4"
wemake-python-styleguide = "~0.16.1"
coverage = "~6.4.2"
pytest-cov = "~3.0.0"
mock = "~4.0.3"
anyio = "~3.6.1"
pytest-xdist = { version = "~2.5.0", extras = ["psutil"] }
types-mock = "~4.0.15"


[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = false
warn_unused_ignores = false

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
